@@ -17,7 +17,6 @@ import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.ints.IntList;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import tech.pegasys.teku.infrastructure.ssz.collections.SszBitlist;
 import tech.pegasys.teku.infrastructure.ssz.schema.SszContainerSchema;
@@ -38,7 +37,7 @@ public class SszTestUtils {
   }
 
   public static SszBitlist not(final SszBitlist bitlist) {
-    List<Boolean> notList = bitlist.stream().map(b -> !b.get()).collect(Collectors.toList());
+    List<Boolean> notList = bitlist.stream().map(b -> !b.get()).toList();
     int[] notBitIndices = IntStream.range(0, notList.size()).filter(notList::get).toArray();
     return bitlist.getSchema().ofBits(bitlist.size(), notBitIndices);
   }
@@ -55,8 +54,7 @@ public class SszTestUtils {
       final String prefix,
       final boolean printCommit,
       final Consumer<String> linesConsumer) {
-    if (node instanceof LeafNode) {
-      LeafNode leafNode = (LeafNode) node;
+    if (node instanceof LeafNode leafNode) {
       linesConsumer.accept(prefix + leafNode);
     } else {
       BranchNode branchNode = (BranchNode) node;
